Do not cache images

--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -27,7 +27,7 @@ RUN apt-get update -y && apt-get install -y \
     python-software-properties \
     zlib1g-dev \
     ruby2.2-dev \
-    ruby2.2<% if ENV['ROLE'] == 'web' %> nginx<% end %>
+    ruby2.2
 
 RUN gem install bundler --no-rdoc --no-ri
 
@@ -35,6 +35,8 @@ RUN gem install bundler --no-rdoc --no-ri
 RUN [ -f /var/lib/locales/supported.d/local ] || touch /var/lib/locales/supported.d/local
 RUN echo 'LANG="en_US.UTF-8"' > /etc/default/locale
 RUN dpkg-reconfigure --frontend noninteractive locales
+
+RUN apt-get install -y nginx
 
 ADD docker/files/etc/supervisor/supervisord.conf /etc/supervisor/supervisord.conf
 
@@ -44,7 +46,6 @@ RUN cd $RAILS_ROOT && \
   bundle install --deployment --path /var/www/shared/vendor/bundle --without test development && \
   echo "SECRET_KEY_BASE=$(./bin/rake secret)" > .env && \
   echo "DATABASE_URL=<%= ENV['DATABASE_URL'] %>" >> .env
-
 
 ENV RAILS_ENV=production
 ENV ROLE=<%= ENV['ROLE'] %>
