--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -44,8 +44,7 @@ ENV RAILS_ROOT=/var/www/app
 COPY . $RAILS_ROOT
 RUN cd $RAILS_ROOT && \
   bundle install --deployment --path /var/www/shared/vendor/bundle --without test development && \
-  echo "SECRET_KEY_BASE=$(./bin/rake secret)" > .env && \
-  echo "DATABASE_URL=<%= ENV['DATABASE_URL'] %>" >> .env
+  echo "SECRET_KEY_BASE=$(./bin/rake secret)" > .env
 
 ENV RAILS_ENV=production
 ENV ROLE=<%= ENV['ROLE'] %>
@@ -59,4 +58,4 @@ ADD docker/files/etc/init.d/unicorn /etc/init.d/unicorn
 RUN chmod +x /etc/init.d/unicorn
 <% end %>
 
-CMD ["/usr/bin/supervisord", "-n"]
+CMD ["/bin/sh", "-c", "echo \"DATABASE_URL=${DATABASE_URL}\" >> /var/www/app/.env && /usr/bin/supervisord -n"]
