--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -49,10 +49,10 @@ RUN [ -f /var/lib/locales/supported.d/local ] || touch /var/lib/locales/supporte
 RUN echo 'LANG="en_US.UTF-8"' > /etc/default/locale
 RUN dpkg-reconfigure --frontend noninteractive locales
 
-ADD docker/files/etc/supervisor/supervisord.conf /etc/supervisor/supervisord.conf
+RUN echo <%= raw `cat docker/files/etc/supervisor/supervisord.conf`.inspect %> > /etc/supervisor/supervisord.conf
 
 <% if ENV['ROLE'] == 'web' %>
-RUN apt-get install -y nginx
+RUN apt-get update -y && apt-get install -y nginx
 <% end %>
 
 COPY . $RAILS_ROOT
@@ -76,4 +76,4 @@ ADD docker/files/etc/init.d/unicorn /etc/init.d/unicorn
 RUN chmod +x /etc/init.d/unicorn
 <% end %>
 
-CMD ["/bin/sh", "-c", "echo \"DATABASE_URL=${DATABASE_URL}\" >> /var/www/app/.env && /usr/bin/supervisord -n"]
+CMD ["/bin/sh", "-c", "'echo \"DATABASE_URL=${DATABASE_URL}\" >> /var/www/app/.env && /usr/bin/supervisord -n'"]
