--- a/Dockerfile.erb
+++ b/Dockerfile.erb
@@ -36,9 +36,10 @@ ENV \
 
 RUN gem install bundler --no-rdoc --no-ri
 RUN mkdir -p $RAILS_ROOT
+WORKDIR ${RAILS_ROOT}
+
 RUN (echo <%= `cat Gemfile`.inspect %> > "${RAILS_ROOT}/Gemfile") && (echo <%= `cat Gemfile.lock`.inspect %> > "${RAILS_ROOT}/Gemfile.lock")
-RUN cd $RAILS_ROOT && \
-  mkdir -p $BUNDLE_PATH && \
+RUN mkdir -p $BUNDLE_PATH && \
   mkdir -p vendor && \
   rm -rf vendor/bundle && \
   ln -s $BUNDLE_PATH vendor/bundle && \
@@ -56,9 +57,9 @@ RUN apt-get update -y && apt-get install -y nginx
 <% end %>
 
 COPY . $RAILS_ROOT
+WORKDIR ${RAILS_ROOT}
 
-RUN cd $RAILS_ROOT && \
-  mkdir -p $BUNDLE_PATH && \
+RUN mkdir -p $BUNDLE_PATH && \
   mkdir -p vendor && \
   rm -rf vendor/bundle && \
   ln -s $BUNDLE_PATH vendor/bundle && \
@@ -76,4 +77,4 @@ ADD docker/files/etc/init.d/unicorn /etc/init.d/unicorn
 RUN chmod +x /etc/init.d/unicorn
 <% end %>
 
-CMD ["/bin/sh", "-c", "'echo \"DATABASE_URL=${DATABASE_URL}\" >> /var/www/app/.env && /usr/bin/supervisord -n'"]
+CMD ["/bin/sh", "/var/www/app/script/run-supervisord.sh"]
