--- a/ecs-task-definitions/service.json.erb
+++ b/ecs-task-definitions/service.json.erb
@@ -9,7 +9,10 @@
       "essential": true,
       "portMappings": [{ "hostPort": 80, "containerPort": 80, "protocol": "tcp" }],
       "mountPoints": [{ "containerPath": "/var/www/app/log", "sourceVolume": "log", "readOnly": false }],
-      "environment": [{ "name": "DATABASE_URL", "value": "<%= ENV['DATABASE_URL'] %>" }],
+      "environment": [
+        { "name": "DATABASE_URL", "value": "<%= ENV['DATABASE_URL'] %>" },
+        { "name": "REDIS_URL", "value": "<%= ENV['REDIS_URL'] %>" }
+      ],
       "essential": true
     },
     {
